--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@kichiyaki/react-native-barcode-generator": "^0.6.7",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/auth": "^22.4.0",
@@ -19,12 +20,20 @@
     "@react-navigation/native-stack": "^7.3.23",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
+    "canvas": "^3.1.2",
+    "jsbarcode": "^3.12.1",
     "react": "19.1.0",
     "react-native": "0.80.2",
+    "react-native-barcode-builder": "^2.0.0",
+    "react-native-barcode-generator": "^0.3.1",
+    "react-native-camera-kit": "^15.1.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "^4.13.1",
+    "react-native-svg": "^15.12.0",
+    "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-vision-camera": "^4.7.1",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
